# arba-grid

./: .clang-format  CMakeLists.txt  README.md  cmake_quick_install.cmake  conanfile.py  grid-config.cmake.in  package-config.cmake.in
cmake/config/: package-config.cmake.in
cmake/scripts/: quick_install.cmake
example/: CMakeLists.txt  grid_example.cpp
example/basic_cmake_project/: CMakeLists.txt  main.cpp
include/arba/grid/: grid.hpp  grid_base.hpp  grid_types.hpp
include/arba/grid/concept/: grid.hpp
include/arba/grid/concepts/: grid.hpp  grid_position.hpp
include/grid/: grid.hpp  grid_base.hpp  grid_types.hpp
test/: CMakeLists.txt  grid_tests.cpp  project_version_tests.cpp
test_package/: CMakeLists.txt  test_package.cpp
